--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-Flask==3.0.3
-redis==4.5.4
-prometheus-client==0.16.0
+async-timeout==5.0.1
+blinker==1.9.0
+click==8.1.8
+Flask==3.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.5
+MarkupSafe==3.0.2
+prometheus_client==0.21.1
+redis==5.2.1
+Werkzeug==3.1.3
