--- a/manifestos/redis-svc.yaml
+++ b/manifestos/redis-svc.yaml
@@ -2,7 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis-service
-  namespace: giropops-senhas  
+  namespace: giropops-senhas
+  labels:
+    app: redis  
 spec:
   selector:
     app: redis
