--- a/helm-chat/templates/redis-deployment.yaml
+++ b/helm-chat/templates/redis-deployment.yaml
@@ -1,9 +1,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: redis-deployment 
+  name: redis-deployment
+  labels:
+    app: redis
 spec:
-  replicas: 1
+  replicas: {{ .Values.redis.replicaCount }}
   selector:
     matchLabels:
       app: redis
@@ -14,13 +16,8 @@ spec:
     spec:
       containers:
       - name: redis
-        image: {{ .Values.redis.image }}
+        image: "{{ .Values.redis.image.repository }}:{{ .Values.redis.image.tag }}"
         ports:
-        - containerPort: {{ .Values.redis.port }}
+        - containerPort: 6379
         resources:
-          limits:
-            cpu: {{ .Values.redis.resources.limits.cpu }}
-            memory: {{ .Values.redis.resources.limits.memory }}
-          requests:
-            cpu: {{ .Values.redis.resources.requests.cpu }}
-            memory: {{ .Values.redis.resources.requests.memory }}
+          {{- toYaml .Values.redis.resources | nindent 10 }}
