--- a/helm-chat/templates/redis-svc.yaml
+++ b/helm-chat/templates/redis-svc.yaml
@@ -2,11 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis-service
+  labels:
+    app: redis
 spec:
   selector:
     app: redis
   ports:
     - protocol: TCP
       port: {{ .Values.redis.service.port }}
-      targetPort: {{ .Values.redis.service.targetPort }}
+      targetPort: 6379
   type: {{ .Values.redis.service.type }}
