--- a/helm-chat/templates/redis-svc.yaml
+++ b/helm-chat/templates/redis-svc.yaml
@@ -4,6 +4,7 @@ metadata:
   name: redis-service
   labels:
     app: redis
+  namespace: {{ .Values.namespace }}
 spec:
   selector:
     app: redis
