altera para loadbalancer o svc do gateway

--- a/nginx-gateway/gateway-service.yaml
+++ b/nginx-gateway/gateway-service.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/version: "1.4.0"
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app.kubernetes.io/name: nginx-gateway
     app.kubernetes.io/instance: nginx-gateway
