--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,7 +1,7 @@
 async-timeout==5.0.1
 blinker==1.9.0
 click==8.1.8
-Flask==3.1.0
+Flask==3.1.1  # Updated from 3.1.0 to fix CVE-2025-47278
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
